--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 /* great little guide: https://css-tricks.com/a-complete-guide-to-dark-mode-on-the-web/#toggling-themes */
 
+h1 {
+  font-size: 3em;
+}
+
+.availability {
+  font-size: 4em;
+}
+
+.footer {
+  font-size: .5em
+}
+
 @media (prefers-color-scheme: dark) {
   /* Dark theme styles go here */
 body {
@@ -8,18 +20,6 @@ body {
 }
 body a {
   color: #809fff;
-}
-
-h1 {
-  font-size: 1.5em;
-}
-
-availability {
-  font-size: 3em;
-}
-
-footer {
-  font-size: .5em
 }
 }
  
@@ -31,16 +31,5 @@ footer {
 }
 a {
   color: #0033cc;
-}
-h1 {
-  font-size: 1.5em;
-}
-
-availability {
-  font-size: 3em;
-}
-
-footer {
-  font-size: .5em
 }
 }
