--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,11 @@ h1 {
 }
 
 .red {
-  font-color: #fd0808;
+  color: #fd0808;
 }
 
 .green {
-  font-color: #0aab35;
+  color: #0aab35;
 }
 
 .footer {
